--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   let ws = undefined
   let connect = () => {
   ws = new WebSocket('ws://localhost:5000/chat')
-  ws.onmessage = event => console.log(event.data)
-  ws.onopen = () => console.log('OPENED')
-  ws.onclose = () => console.log('CLOSED')
+  let ws.onmessage = event => console.log(event.data)
+  let = ws.onopen = () => console.log('OPENED')
   }
 
   let send = message => ws.send(message)
 </script>
+
