--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<script type="text/javascript">
+<!doctype html>
+<html>
+  <head>
+    <title>Socket.IO chat</title>
+    <style>
+      * { margin: 0; padding: 0; box-sizing: border-box; }
+      body { font: 13px Helvetica, Arial; }
+      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+      #messages { list-style-type: none; margin: 0; padding: 0; }
+      #messages li { padding: 5px 10px; }
+      #messages li:nth-child(odd) { background: #eee; }
+    </style>
+  </head>
+  <body>
+    <ul id="messages"></ul>
+    <form action="">
+      <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
 
-  let ws = undefined
-  let connect = () => {
-  ws = new WebSocket('ws://localhost:5000/chat')
-  ws.onmessage = event => console.log(event.data)
-  ws.onopen = () => console.log('OPENED')
-  }
-
-  let send = (id, message) => ws.send(JSON.stringify({id: id, message: message}))
-</script>
-
+    <script></script>
+  </body>
+</html>
